
Language files listed under each version were made by the author beside them, and then
modified by me for consistency/bug fixing.

Please send any bug reports to BenBE@omorphia.de, or use the bug report tracker
at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)

Version 1.0.8.7
  -  Added language files
  -  Minor change in INT_BASIC number regexp to support '..' range operator
     as to be found in most Pascal-like languages (BenBE)
  -  Improvements to language fiels (BenBE)
     * Fixed broken links in Prolog language file (BenBE)
     * Fixed keywords in generics expressions in Java5 (BenBE)
     * Added support for import static in Java5 (BenBE)
     * Added Standard Integer Types for C and c++ (BenBE)
     * Fixed some regexp issues in Erlang (BenBE)
     * Added some missing keywords for Clojure (BenBE)
     * Added some missing keywords for Lisp (BenBE)
Version 1.0.8.6
  -  Added language files
     * Clojure (Jess Johnson)
     * Cuesheet (Benny Baumann)
     * F# (Julien Ortin)
     * GAMBAS (Jesus Guardon)
     * Logtalk (Paulo Moura)
     * MapBasic (Tomasz Berus)
     * NewLisp (cormullion)
     * Perl 6 (Kodi Arfer)
     * Pike (Rick E.)
     * SystemVerilog (Sean O'Boyle)
  -  Reworked parts of the number support (BenBE)
  -  Improvements to language fiels (BenBE)
     * Fixed broken links in R/S+ language file (BenBE)
     * Fixed an issue with if= argument for dd command (BenBE)
     * T-SQL should use GESHI_CAPS_NO_CHANGE for keywords (BenBE)
     * Fixed missed shorthand arg references in Bash (BenBE)
     * Fixed first line not getting highlighted in diff language (BenBE)
     * Added some keywords for csharp (RC)
Version 1.0.8.5
  -  Added language files
     * AutoHotkey (Naveen Garg)
     * Awk (George Pollard)
     * GADV 4CS (Jason Curl)
     * jQuery (Rob Loach)
     * PowerBuilder (Doug Porter)
     * PureBasic (Gustavo Julio Fiorenza)
     * R / S+ (Ron Fredericks, Benilton Carvalho)